# CurrenSee

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
docs/: COMMUNICATION.md  EVALUATION.md  SOLUTION_DESCRIPTION.md
src/currensee/: config.py  constants.py  extract.py  logging_config.py  models.py  storage.py  transform_load.py
tests/: test_core.py
